--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,12 +20,11 @@ header h1 {
     font-size: 48px;
 }
 
-header h1 span {
+header h1 strong {
     color: #d9dcd6;
 }
 
-header ul {
-    list-style-type: none;
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -33,7 +32,11 @@ header ul {
     font-size: 20px;
 }
 
-header ul li {
+header nav ul {
+    list-style-type: none;
+}
+
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -120,6 +123,6 @@ footer {
     text-align: center;
 }
 
-footer h2 {
+footer h4 {
     font-size: 20px;
 }
