minor update to style.css
clarified the reason for the change on the footer h4 selector

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ footer {
     text-align: center;
 }
 
-/* changed from h2 to h4 */
+/* changed from h2 to h4 for headers continuity */
 footer h4 {
     font-size: 20px;
 }
